--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "Configuraçães",
         "Configurações",
         "padrões",
-        "rocketsocket"
+        "rocketsocket",
+        "tsyinge",
+        "websockets"
     ]
 }
